| Summary: | ASTERISK-26994: Confbridge: CBAnn channels intermittently become stuck when caller hangs up before recording name | ||
| Reporter: | James Terhune (bigjimmy) | Labels: | pjsip |
| Date Opened: | 2017-05-11 13:29:01 | Date Closed: | 2017-08-30 07:58:56 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_confbridge |
| Versions: | 13.15.0 13.16.0 14.5.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Ubuntu 16.04 | Attachments: | ( 0) cbann_console_log.txt ( 1) cbann_iax2_log.txt ( 2) full |
| Description: | If a caller to a conference hangs up while playing the prompt to record their name or during the recording itself, but before joining the conference, the CBAnn/ channel remains stuck.
This is reproducible most of the time. /etc/asterisk/confbridge.conf: [general] [default_user] type=user quiet=yes [default_bridge] type=bridge [qsd-confbridge-1] type=user announce_only_user=yes announce_user_count=yes quiet=no announce_join_leave=yes music_on_hold_when_empty=no extensions.conf: exten => 765,1,Confbridge(1,,qsd-confbridge-1) Console log is attached. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-05-11 13:29:02.046-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: James Terhune (bigjimmy) 2017-05-11 13:32:19.215-0500 Console log By: Rusty Newton (rnewton) 2017-05-12 09:24:18.664-0500 I'm curious, have you tested with pjsip channels or any other channel types? By: Ross Beer (rossbeer) 2017-05-12 09:29:11.499-0500 I have seen this behaviour with PJSIP By: James Terhune (bigjimmy) 2017-05-12 11:00:21.261-0500 Same scenario, but with an IAX channel By: James Terhune (bigjimmy) 2017-05-12 11:00:59.600-0500 I re-ran the scenario with an IAX channel and did not see the same problem. By: Benjamin Keith Ford (bford) 2017-06-01 17:22:10.664-0500 Hi [~JTerhune], [~rossbeer]. So far we have been unable to reproduce the issue. Could you provide further details / instructions? Configuration files would be very helpful here as well (iax, sip, pjsip). By: Ross Beer (rossbeer) 2017-06-01 17:54:58.632-0500 To reproduce, enter a conference and after the prompt playing record your name, once asterisk is recording your name hangup: {noformat} <PJSIP/hpbx-00000026> Playing 'vm-rec-name.alaw' (language 'en') -- <PJSIP/hpbx-00000026> Playing 'beep.alaw' (language 'en') -- x=0, open writing: /var/spool/asterisk/confbridge/confbridge-name-10001-conf01-1496357283.40 format: sln, 0x7ff6b001ea40 -- User hung up {noformat} The CBAnn channels just stay active: {noformat} Channel Context Extension Prio State Application Data CallerID Duration Accountcode PeerAccount BridgeID CBAnn/10001-00000001 default s 1 Up (None) (Empty) 00:00:47 CBAnn/10001-00000001 default s 1 Up (None) (Empty) 00:00:47 0052a5b3-0c7c-4b5d-9 2 active channels {noformat} This was using today's GIT commit Asterisk GIT-13-13.15.0-rc1-196-g3e8eea0M By: James Terhune (bigjimmy) 2017-06-02 08:54:02.962-0500 I have stripped down the sip.conf and included it below. I also retested it with Asterisk 13.16.0 and am attaching the full log (with debug set to 9). However, in my case, the channels don't stick around if I hang up after it starts recording the name. [general] context=default ; Default context for incoming calls bindaddr=0.0.0.0 ; IP address to bind to (0.0.0.0 binds to all) srvlookup=yes ; Enable DNS SRV lookups on outbound calls [test_105] type=friend ; Friends place calls and receive calls context=sipin ; Context for incoming calls from this user secret=secret host=dynamic ; This peer register with us dtmfmode=info ; Choices are inband, rfc2833, or info username=test_105 ; Username to use in INVITE until peer registers nat=yes ; Normally you do NOT need to set this parameter disallow=all allow=ulaw ; dtmfmode=inband only works with ulaw or alaw! ;allow=all canreinvite=no progressinband=no ; Polycom phones don't work properly with "never" callerid="One Oh Five" <406667778888> qualify=no callgroup=1 pickupgroup=1 By: Ross Beer (rossbeer) 2017-06-02 09:40:35.920-0500 I'm using the chan_pjsip implementation, so I don't think it's directly related to channel drivers. By: Benjamin Keith Ford (bford) 2017-06-02 10:51:23.365-0500 This issue is able to be reproduced using SIP, PJSIP, and IAX. Tested against Asterisk 13.15.0, 13.16.0, and 14.5.0. Additionally, this does not happen every time a channel is hung up. It can also happen at any point during the prompt to record your name or during the recording itself, so long as the channel is hung up before entering the conference. By: Friendly Automation (friendly-automation) 2017-08-30 07:58:58.637-0500 Change 6320 merged by Joshua Colp: confbridge: Handle user hangup during name recording [https://gerrit.asterisk.org/6320|https://gerrit.asterisk.org/6320] By: Friendly Automation (friendly-automation) 2017-08-30 08:27:55.338-0500 Change 6323 merged by Joshua Colp: confbridge: Handle user hangup during name recording [https://gerrit.asterisk.org/6323|https://gerrit.asterisk.org/6323] By: Friendly Automation (friendly-automation) 2017-08-30 13:56:10.156-0500 Change 6321 merged by Joshua Colp: confbridge: Handle user hangup during name recording [https://gerrit.asterisk.org/6321|https://gerrit.asterisk.org/6321] By: Friendly Automation (friendly-automation) 2017-08-30 13:56:20.149-0500 Change 6322 merged by Joshua Colp: confbridge: Handle user hangup during name recording [https://gerrit.asterisk.org/6322|https://gerrit.asterisk.org/6322] | ||